--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "beanie>=1.27.0",
     "fastapi[standard]>=0.115.6",
     "python-dotenv>=1.0.1",
 ]
